flex box jusitfy content

--- a/ES6_Concepts/index.html
+++ b/ES6_Concepts/index.html
@@ -5,78 +5,41 @@
     <script src="/Javascript.js"></script>
   </head>
 <style>
-h1 {
-  font-family: Helvetica;
-  color: red;
-  font-size: 50px;
-  text-align: right;
-}
+  .box-1 {
+    border: 1px solid black;
+    color: white;
+    background-color: blue;
+    height: 150px;
+    width: 300px;
+  }
 
-h2 {
-  font-family: Monaco;
-  color: seagreen;
-  font-size: 40px;
-  border: 9px dotted gray;
-  text-align: center;
-}
+  .box-2 {
+    border: 1px solid black;
+    color: white;
+    background-color: red;
+    height: 100px;
+    width: 300px;
+  }
 
-p {
-  font-family: Comic Sans MS;
-  font-size: 30px;
-  background-color: black;
-  color: white;
-}
-
-div {
-  color: blue;
-}
-
-span {
-  color: yellow;
-  text-decoration: underline;
-  font-style: italic;
-}
-
-ol {
-  list-style: upper-roman;
-}
-
-ul {
-  list-style: square;
-}
-
-li {
-  color: brown;
-}
+  .box-3 {
+    border: 1px solid black;
+    color: white;
+    background-color: green;
+    height: 200px;
+    width: 100px;
+  }
+  .flex-container{
+     display: flex;
+     justify-content: center;
+  }
+  
 </style>
+
   <body>
-<h1>This is the h1</h1>
-<h2>This is the h2</h2>
-<h1>This is another h1</h1>
-<p>This is a paragraph of text. Inside of it I put a <span>span</span> that can be styled differently too. Here's
-  <span>another span</span> too. Some pretty cool stuff.</p>
-<div>
-  <h3>Here's an h3</h3>
+<div class="flex-container">
+  <div class="box-1">1</div>
+  <div class="box-2">2</div>
+  <div class="box-3">3</div>
 </div>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit facilis vitae necessitatibus, id ratione
-  reprehenderit quam illum ab quibusdam laborum quis et ea voluptates asperiores ex quaerat aliquid esse cumque?</p>
-<ul>
-  <li>List Item 1</li>
-  <li>List Item 2</li>
-  <li>List Item 3</li>
-  <li>List Item 4</li>
-  <li>List Item 5</li>
-</ul>
-<ol>
-  <li>List Item 1</li>
-  <li>List Item 2</li>
-  <li>List Item 3</li>
-  <li>List Item 4</li>
-  <li>List Item 5</li>
-</ol>
-<h2>This is the h2 at the end of the page</h2>
-
   </body>
-
-
 </html>
