--- a/ES6_Concepts/index.html
+++ b/ES6_Concepts/index.html
@@ -9,7 +9,7 @@
     border: 1px solid black;
     color: white;
     background-color: blue;
-    height: 150px;
+    height: 500px;
     width: 300px;
   }
 
@@ -18,7 +18,7 @@
     color: white;
     background-color: red;
     height: 100px;
-    width: 300px;
+    width: 500px;
   }
 
   .box-3 {
@@ -30,15 +30,20 @@
   }
   .flex-container{
      display: flex;
-     justify-content: center;
+     
   }
-  
+  .jc-sp{
+    align-items: flex-start;
+  }
 </style>
 
   <body>
-<div class="flex-container">
+<div class="flex-container jc-sp">
   <div class="box-1">1</div>
   <div class="box-2">2</div>
+ 
+</div>
+<div>
   <div class="box-3">3</div>
 </div>
   </body>
